# abm-gods-eye

./: README.md  pyproject.toml
examples/: mesa_adapter.py
examples/schelling_segregation/: chat.py  gods_eye_adapter.py
netlogo-extension/: build.sbt  manifest.txt
netlogo-extension/examples/ants/: Ants.nlogox
netlogo-extension/project/: plugins.sbt
netlogo-extension/src/main/java/: AskReporter.java  EndSessionCommand.java  GodsEyeExtension.java  InitCommand.java  RecordStateCommand.java
src/abm_gods_eye/: __init__.py  adapter.py  callbacks.py  llm.py  observer.py  server.py  tools.py
